fix kotlin lint error