@@ -46,7 +46,6 @@ tasks.withType(Test).configureEach {
     jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED")
     jvmArgs("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED")
     jvmArgs('--add-opens=java.base/java.util.concurrent=ALL-UNNAMED')
-    jvmArgs('--add-opens=java.base/java.lang.reflect=ALL-UNNAMED')
 }
 
 task kitSdkJavadocs(type: Javadoc) {
